[package]
name = "driver-pal"
description = "Rust embedded driver helper package"
repository = "https://github.com/ryankurte/rust-driver-pal"
version = "0.8.0-alpha.5"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
edition = "2018"
license = "MIT"

[features]
mock = []
ffi = [ "libc" ]
utils = [ "hal" ]
hal = [ "toml", "structopt", "serde", "simplelog" ]
hal-cp2130 = [ "driver-cp2130" ]
hal-linux = [ "linux-embedded-hal" ]
# default = [ "mock", "hal", "hal-cp2130", "hal-linux" ]
default = [ "mock" , "hal" ]

[dependencies]
log = "0.4.6"
libc = { version = "0.2.54", optional = true }

serde = { version = "1.0.91", features = ["derive"], optional = true }
toml = { version = "0.5.1", optional = true }

structopt = { version = "0.3.11", optional = true }
simplelog = { version = "0.8.0", optional = true }

[dependencies.embedded-hal]
version = "=1.0.0-alpha.6"

[dependencies.linux-embedded-hal]
#version = "0.4.0-alpha.1"
optional = true

[dependencies.driver-cp2130]
version = "1.0.0-alpha.3"
optional = true


