[package]
name = "driver-pal"
description = "Rust embedded driver helper package"
repository = "https://github.com/ryankurte/rust-driver-pal"
version = "0.8.0-alpha.6"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
edition = "2018"
license = "MIT"

[features]
mock = []
ffi = [ "libc" ]
utils = [ "hal" ]
hal = [ "toml", "clap", "serde", "simplelog" ]
hal-cp2130 = [ "driver-cp2130" ]
hal-linux = [ "linux-embedded-hal" ]
default = [ "mock" , "hal", "hal-cp2130", "hal-linux" ]

[dependencies]
log = "0.4.6"
libc = { version = "0.2.54", optional = true }

serde = { version = "1.0.91", features = [ "derive" ], optional = true }
toml = { version = "0.5.1", optional = true }

clap = { version = "4.4.7", optional = true, features = [ "derive", "env" ] }
simplelog = { version = "0.8.0", optional = true }

embedded-hal = { version = "1.0.0-rc.1" }
linux-embedded-hal = { version = "0.4.0-alpha.3", optional = true }
driver-cp2130 = { version = "1.0.0-alpha.5", optional = true }

[patch.crates-io]
linux-embedded-hal = { git = "https://github.com/rust-embedded/linux-embedded-hal" }
